package com.poo2.siteStreaming.DTO;

public record UsuarioEstatisticaDTO(String nomeUsuario, long totalVisualizacoes) {
}
