package com.poo2.siteStreaming.DTO;

public record VideoEstatisticaDTO(String titulo, String categoria, long totalVizualizacoes, double mediaNota) {
}
